--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "nvim"]
 	path = nvim
 	url = git@github.com:SilverMira/lazyvim.git
+[submodule "wezterm"]
+	path = wezterm
+	url = git@github.com:SilverMira/wezterm.git
